section4/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
   name: nginx-public-gateway   
   namespace: default
spec:
  selector:
      istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "domain.com"
          
        
     

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-route
  namespace: default
spec:
  hosts:
     - "domain.com" 
  gateways:
     -  default/nginx-public-gateway   
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
          host: nginx-service.default.svc.cluster.local
          port:
            number: 80
